@@ -1,0 +1,8 @@
+package us.crast.mondochest;
+
+public enum Status {
+	SUCCESS,
+	ERROR,
+	WARNING,
+	USAGE
+}
